harbor/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`harbor.doomain.ir`)
      services:
        - kind: Service
          name: harbor-portal
          namespace: harbor
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`harbor.doomain.ir`) && (PathPrefix(`/api`) || PathPrefix(`/service`) || PathPrefix(`/v2`) || PathPrefix(`/chartrepo`) || PathPrefix(`/c`))
      services:
        - kind: Service
          name: harbor-portal
          namespace: harbor
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`notary.doomain.ir`)
      services:
        - kind: Service
          name: harbor-notary-server
          namespace: harbor
          port: 4443
          scheme: http
